# executable-world-models

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/: aws-bedrock-setup.md  aws-deploy.md  aws-setup.md
examples/fixtures/: README.md  trading_path.json
examples/scenarios/: scenario_reject.json
examples/strategies/: mean_reversion_demo.json  sma_crossover_demo.json  threshold_demo.json
infra/cdk/: package.json  tsconfig.json
openspec/: AGENTS.md  beyond-tokens.yaml  project.md
scripts/: check_bedrock_access.sh  demo_agentcore_memory.py  demo_agentcore_tools.py  demo_aws.py  demo_aws_planner.py  demo_local.py  demo_local_bedrock_planner.py  demo_local_loop.py  demo_local_planner.py  demo_local_strategy.py  demo_local_trade_tape.py  generate_price_path.py  replay_executions.py  replay_tape.py  smoke_agentcore_hello.py  smoke_agentcore_memory.py  smoke_agentcore_tools.py  smoke_aws.py  smoke_aws_planner.py
tests/integration/: test_aws_agentcore_hello_optional.py  test_aws_agentcore_memory_optional.py  test_aws_agentcore_tools_optional.py  test_aws_optional.py  test_bedrock_optional.py  test_demo_local.py  test_demo_local_loop.py  test_demo_local_strategy.py  test_demo_local_tape.py
tests/unit/: test_agentcore_hello_payload.py  test_agentcore_memory_budget.py  test_agentcore_memory_dynamodb.py  test_agentcore_memory_payload.py  test_agentcore_tools_budget.py  test_agentcore_tools_registry.py  test_bedrock_planner.py  test_broker_paper.py  test_deltas.py  test_execution_ledger.py  test_explainability.py  test_mvwm_core.py  (+10 more)
(+83 files in other folders)
