[project]
name = "beyond-tokens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "boto3",
  "pytest",
  "ruff",
]

[project.optional-dependencies]
dev = [
  "pydantic",
  "boto3",
  "pytest",
  "ruff",
]

[tool.setuptools]
packages = ["services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
